The Build tool now uses ProcessBuilder.